Fix bug where underscore was invisible

--- a/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
@@ -854,3 +854,6 @@ input[type="checkbox"] {
     background-color: rgba(244, 66, 66, 0.30);
     text-align: center;
 }
+.object-identifier-value {
+    display: inline-block;
+}
